fix new ToC gap

--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.67
+@version     1.0.68
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -242,6 +242,7 @@ domain("wikifunctions.org") {
 /* Fix the jumping TOC upon first appearance when scrolling */
   .mw-table-of-contents-container.mw-sticky-header-element {
     top: 56px !important;
+    margin-top:0 !important;
   }
   .client-js .vector-sticky-header-visible .mw-sticky-header-element {
     top: 56px !important;
